--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="table-responsive" onchange="res()">
 
 
     <div id="root"></div>
