--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    
     <title>React App</title>
   </head>
-  <body class="table-responsive" onchange="res()">
+  <body class="table-responsive">
 
 
     <div id="root"></div>
