--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     
     <title>React App</title>
   </head>
-  <body>
+  <body id="table-resposiveness" onchange="run()">
 
     <div id="root"></div>
    
