--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     
     <title>React App</title>
   </head>
-  <body id="table-responsiveness" onchange="run()">
+  <body id="table-responsiveness">
 
     <div id="root"></div>
    
